--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>OpenTourBuilder</title>
+    <title>TourForge</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="/otb_editor/index.tsx" type="module"></script>
+    <script src="/tf_editor/index.tsx" type="module"></script>
   </body>
 </html>
